PP-12413: Endpoint to revoke all tokens for an account (#1295)
* PP-12413: Endpoint to revoke all tokens for an account